--- a/cerficate.html
+++ b/cerficate.html
@@ -19,6 +19,11 @@
         rel="stylesheet" type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
+    <style>
+        p {
+            font-size: clamp(15px, 2.5vw, 23px); /* ขนาดเริ่มต้น 18px, เพิ่มตาม 2.5vw, สูงสุด 23px */
+        }
+    </style>
 </head>
 
 <body>
@@ -41,7 +46,7 @@
                 <div class="content-box">
                     <div class="content-section-heading">
                         <div class="content-section-heading text-center">
-                            <h2 class="mb-0 ">CERTIFICATE</h2>
+                            <h2 class="mb-0" style="">CERTIFICATE</h2>
                         </div>
                     </div>
                 </div>
@@ -57,7 +62,7 @@
                                 <div class="">
                                     <div class="content-section-heading">
                                         <div class="content-section-heading text-center">
-                                            <p class="mb-0 " style="font-size: 23px; margin-top: 1.5rem;">
+                                            <p class="mb-0 " style=" margin-top: 1.5rem;">
                                                 ได้เข้าร่วมการแข่งขันศิลปหัตกรรมระดับเขตการศืกษา<br>การแข่งขันหุ่นยนต์ระดับกลาง<br>ได้รับรางวัลระดับเหรียญทองแดง
                                             </p>
                                         </div>
@@ -72,7 +77,7 @@
                                 <div class="">
                                     <div class="content-section-heading">
                                         <div class="content-section-heading text-center">
-                                            <p class="mb-0 " style="font-size: 23px; margin-top:1.5rem">
+                                            <p class="mb-0 " style=" margin-top:1.5rem">
                                                 ได้เข้าร่วมกิจกรรม work shop
                                                 อบรมการต่อวงจรไฟฟ้า<br>ที่มหาวิทยาลัยพระจอมเกล้าธนบุรี
                                             </p>
@@ -91,7 +96,7 @@
                                 <div class="">
                                     <div class="content-section-heading">
                                         <div class="content-section-heading text-center">
-                                            <p class="mb-0 " style="font-size: 23px; margin-top: 1.5rem;">
+                                            <p class="mb-0 " style=" margin-top: 1.5rem;">
                                                 ได้เข้าร่วมกิจกรรม open house แนะนำแนวทางการศีกษาต่อ
                                                 <br>ที่มหาวิทยาลัยพระจอมเกล้าธนบุรี
                                             </p>
@@ -107,7 +112,7 @@
                                 <div class="">
                                     <div class="content-section-heading">
                                         <div class="content-section-heading text-center">
-                                            <p class="mb-0 " style="font-size: 23px; margin-top:1.5rem">
+                                            <p class="mb-0 " style=" margin-top:1.5rem">
                                                 ได้เข้าร่วมการแข่งขันการแก้ไขปัณหาโดยการ<br>เขียนโปรแกรมคอมพิวเตอร์
                                             </p>
                                         </div>
@@ -125,7 +130,7 @@
                                 <div class="">
                                     <div class="content-section-heading">
                                         <div class="content-section-heading text-center">
-                                            <p class="mb-0 " style="font-size: 23px; margin-top: 1.5rem;">
+                                            <p class="mb-0 " style=" margin-top: 1.5rem;">
                                                 ได้เข้าร่วมกิจกรรม engineer open house
                                                 <br>ที่มหาวิทยาลัยพระจอมเกล้าธนบุรี
                                             </p>
@@ -141,7 +146,7 @@
                                 <div class="">
                                     <div class="content-section-heading">
                                         <div class="content-section-heading text-center">
-                                            <p class="mb-0 " style="font-size: 23px; margin-top:1.5rem">
+                                            <p class="mb-0 " style=" margin-top:1.5rem">
                                                 ได้เข้าร่วมการอบรม PIM Young Creative
                                                 Program<br>ที่สถาบันการจัดการปัญญาภิวัฒน์
                                             </p>
@@ -158,7 +163,7 @@
                                 <div class="">
                                     <div class="content-section-heading">
                                         <div class="content-section-heading text-center">
-                                            <p class="mb-0 " style="font-size: 23px; margin-top: 1.5rem;">
+                                            <p class="mb-0 " style=" margin-top: 1.5rem;">
                                                 ได้เข้าร่วมการอบรมเชิงปฎิบัติการ<br>ARSA Framework:Generative
                                                 AI<br>จัดขี้นโดยสำนักงานวิจัยแห่งชาติ
                                             </p>
@@ -173,7 +178,7 @@
                                 <div class="">
                                     <div class="content-section-heading">
                                         <div class="content-section-heading text-center">
-                                            <p class="mb-0 " style="font-size: 23px; margin-top:1.5rem">
+                                            <p class="mb-0 " style=" margin-top:1.5rem">
                                                 ได้เข้าร่วมการอบรมระยะสั้นภายใต้หัวข้อ<br>"การเขียนโปรแกรมและวิทยาการหุ่นยนต์เบื่องต้น"<br>ที่สถาบันเทคโนโลยีพระจอมเกล้าเจ้าคุณทหารลาดกระบัง
                                             </p>
                                         </div>
@@ -190,7 +195,7 @@
                                 <div class="">
                                     <div class="content-section-heading">
                                         <div class="content-section-heading text-center">
-                                            <p class="mb-0 " style="font-size: 23px; margin-top: 1.5rem;">
+                                            <p class="mb-0 " style=" margin-top: 1.5rem;">
                                                 ได้เข้าร่วมเสนอผลงานในหัวข้อ<br>"Suthi Innovation Exhibition 2023"
                                             </p>
                                         </div>
@@ -204,7 +209,7 @@
                                 <div class="">
                                     <div class="content-section-heading">
                                         <div class="content-section-heading text-center">
-                                            <p class="mb-0 " style="font-size: 23px; margin-top:1.5rem">
+                                            <p class="mb-0 " style=" margin-top:1.5rem">
                                                 ได้เข้าร่วมการแข่งขัน CUBS BLOCKKATHON
                                                 ในหัวข้อ<br>"การนำเสนอการแก้ปัญหาทางธุรกิจโดยการใช้ block chain"
                                             </p>
@@ -222,7 +227,7 @@
                                 <div class="">
                                     <div class="content-section-heading">
                                         <div class="content-section-heading text-center">
-                                            <p class="mb-0 " style="font-size: 23px; margin-top: 1.5rem;">
+                                            <p class="mb-0 " style=" margin-top: 1.5rem;">
                                                 ได้เข้าร่วมทดสอบตนเองในสายงาน software engineer<br>จัดขี้นโดย quick try
                                             </p>
                                         </div>
